2011-03-25  Dan Bernstein  <mitz@apple.com>

        Reviewed by Darin Adler.

        <rdar://problem/9134330> Missing expansion before ideograph at the beginning or end of a text run
        https://bugs.webkit.org/show_bug.cgi?id=57106

        * fast/text/justify-ideograph-leading-expansion.html: Added.
        * platform/mac/fast/text/justify-ideograph-leading-expansion-expected.checksum: Added.
        * platform/mac/fast/text/justify-ideograph-leading-expansion-expected.png: Added.
        * platform/mac/fast/text/justify-ideograph-leading-expansion-expected.txt: Added.

2011-03-25  Andy Estes  <aestes@apple.com>

        plugins/embed-prefers-plugins-for-images.html fails on Windows.
        https://bugs.webkit.org/show_bug.cgi?id=57132

        * platform/win/Skipped: Skip plugins/embed-prefers-plugins-for-images.html

2011-03-25  Oliver Hunt  <oliver@apple.com>

        Reviewed by Darin Adler.

        Allow defineOwnProperty to work on DOMObjects
        https://bugs.webkit.org/show_bug.cgi?id=57129

        Now we disallow the cross origin accesses, rather than just disallowing
        the defineOwnProperty at all.

        * http/tests/security/xss-DENIED-defineProperty-expected.txt:

2011-03-25  Andy Estes  <aestes@apple.com>

        Reviewed by Adele Peterson.

        REGRESSION (r70748): latest nightly builds kills AC_QuickTime.js
        https://bugs.webkit.org/show_bug.cgi?id=49016

        * fast/images/embed-image.html: Disable plug-ins to continue testing
        native image rendering with embed.
        * plugins/embed-prefers-plugins-for-images-expected.txt: Added.
        * plugins/embed-prefers-plugins-for-images.html: Added.
        * plugins/plugin-javascript-access-expected.txt: Updated to include the
        new MIME type registered by TestNetscapePlugIn.

2011-03-25  Vincent Scheib  <scheib@chromium.org>

        fast/forms/input-file-directory-upload.html timing out.
        http://crbug.com/77468
